Assorted code inspection quick fixes